syntax = "proto3";

option csharp_namespace = "TuiHub.Protos.User";

package user;

service UserGrpc {
    rpc Login (LoginRequest) returns (LoginReply);
}

message LoginRequest {
    string name = 1;
    string password = 2;
}

message LoginReply {
    int64 user_id = 1;
    string token = 2;
    Status status = 3;
}

enum Status {
    UNKNOWN = 0;
    SUCCESS = 1;
    FAILED = 2;
}
